@@ -186,6 +186,7 @@ def dump_data_sources(
                 database_name,
                 database.get('hostname'),
                 database.get('port'),
+                database.get('label'),
             )
 
             if os.path.exists(dump_filename):
@@ -302,16 +303,16 @@ def make_data_source_dump_patterns(
     borgmatic_source_directory = borgmatic.config.paths.get_borgmatic_source_directory(config)
 
     return (
-        dump.make_data_source_dump_filename(make_dump_path('borgmatic'), name, hostname='*'),
+        dump.make_data_source_dump_filename(make_dump_path('borgmatic'), name, label='*'),
         dump.make_data_source_dump_filename(
             make_dump_path(borgmatic_runtime_directory),
             name,
-            hostname='*',
+            label='*',
         ),
         dump.make_data_source_dump_filename(
             make_dump_path(borgmatic_source_directory),
             name,
-            hostname='*',
+            label='*',
         ),
     )
 
@@ -359,6 +360,7 @@ def restore_data_source_dump(
         make_dump_path(borgmatic_runtime_directory),
         data_source['name'],
         data_source.get('hostname'),
+        data_source.get('label'),
     )
     psql_command = tuple(
         shlex.quote(part) for part in shlex.split(data_source.get('psql_command') or 'psql')
